# token-whitelist

./: README.md
js/: .gitignore  package-lock.json  package.json
js/cli/: main.js  token-whitelist-test.js
js/client/: pubkeys.js  token-whitelist.js
js/client/util/: keypair.js  new-account-with-lamports.js
program/: Cargo.toml  LICENSE.txt
program/src/: error.rs  instruction.rs  processor.rs  state.rs
